<resources>
    <string name="app_name">iAdv8</string>
    <string name="no_internet">Ensure your internet connection !</string>
    <string name="instabilidade_servidor">There is some connectivity issue. Please try again later.</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Login Screen -->
    <string name="login_title">Login</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Sign In</string>
    <string name="digiteEmail">Please enter email address</string>
    <string name="digiteValidEmail">Please enter a valid email address</string>
    <string name="digitePassword">Please enter password</string>
    <string name="sign_in_google">Sign in with Google</string>

    <string name="details">DETAILS</string>
    <string name="impression">IMPRESSION</string>
    <string name="what_is_this">(What is this ?)</string>
    <string name="search_title">search</string>

    <string name="rupee">\u20B9</string>

    <!--Compaign-->
    <string name="title_activity_campaign">Campaign</string>

    <!-- Home -->
    <string name="share_text_subject">Invite Friend via...</string>
    <string name="share_app_text">Check out iAdv8 Application for your smartphone. Download it today from https://play.google.com/store/apps/details?id=adglobal360.onlinemarketingtool.adv8.Individual</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_keywords">Keywords</string>
    <string name="title_activity_ads">Ads</string>
    <string name="title_activity_adgroup">Adgroups</string>

    <string-array name="spinner_date_selector">
        <item>Yesterday</item>
        <item>Last 7 days</item>
        <item>Last 30 days</item>
        <item>Custom</item>
        <item></item>
    </string-array>
    <string-array name="tabs_setting_page">
        <item>Google Adwords</item>
        <item>Google Analytics</item>
    </string-array>
    <string name="NA">NA</string>

    <string name="text_title">Set time range</string>
    <string name="txt_ok">OK</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_apply">Apply</string>

    <string name="lead_overview">Leads Overview</string>
    <string name="lead_date">Date</string>
    <string name="lead_status">Status</string>
    <string name="lead_source">Source</string>
    <string name="txt_lms_lead_date">Nov 8, 2014 10:45 AM</string>
    <string name="txt_lms_lead_time">2h ago</string>
    <string name="txt_name">Name</string>
    <string name="txt_campany">Campany name</string>
    <string name="title_activity_lead_dashboard1">LeadDashboardActivity1</string>
    <string name="title_activity_insight">InsightActivity</string>
    <string name="title_activity_lead_source">LeadSourceActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_settings">Settings</string>

</resources>
